--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,5 @@ InitTestScene*.unity*
 
 # Auto-generated scenes by play mode tests
 /[Aa]ssets/[Ii]nit[Tt]est[Ss]cene*.unity*
+Assets/Scripts/RemoveGarbage.cs
+Assets/Scripts/RemoveGarbage.cs.meta
